openjdkをjlinkを使用し容量削減